objects/Community_Announcement__c.object
<CustomObject>
    <fields>
        <fullName>Description_1__c</fullName>
        <label>Description 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_2__c</fullName>
        <label>Description 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_3__c</fullName>
        <label>Description 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message/Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to publish the Copa Update.</description>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Community Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Start_Date__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copa_Updates</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Published__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Community_Announcement__c.Copa_Update</value>
        </filters>
        <label>Copa Updates</label>
    </listViews>
    <listViews>
        <fullName>Marquee</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Community_Announcement__c.Marquee</value>
        </filters>
        <label>Marquee</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Community Announcement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Announcements</pluralLabel>
    <recordTypes>
        <fullName>Copa_Update</fullName>
        <active>true</active>
        <description>Used to create Copa Updates for community.</description>
        <label>Copa Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marquee</fullName>
        <active>true</active>
        <description>Used to create Marquee for community.</description>
        <label>Marquee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Cannot_Be_Prior_To_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(Start_Date__c &gt; End_Date__c, RecordType.DeveloperName == &apos;Marquee&apos;), true, false)</errorConditionFormula>
        <errorMessage>End Date cannot be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Ttitle_Chars_on_Copa_Update</fullName>
        <active>true</active>
        <description>This rule is used to limit the number of character to 58 on Message/Title field when creating Copa Update. As increasing the number of character in this field may makes the UI of Copa Update wierd.</description>
        <errorConditionFormula>IF( AND(LEN(Message__c) &gt; 58, RecordType.DeveloperName == &apos;Copa_Update&apos;), true, false)</errorConditionFormula>
        <errorMessage>Maximum 58 characters can be added in Copa-Update Title.</errorMessage>
    </validationRules>
</CustomObject>